--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,11 @@ footer {
     font-size: 2rem;
   }
   
-  .nav-links {
+  /* .nav-links {
+    display: none;
+  } */
+
+  .desktop-only {
     display: none;
   }
 }
